Added code for running calculator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Run CulcV3</string>
+    <string name="run_calculator">RUN CALCULATOR</string>
 </resources>
